--- a/Client/travel-go-client/src/components/Container/LandingContainer/CategoryContainer/CategoryContainer.module.scss
+++ b/Client/travel-go-client/src/components/Container/LandingContainer/CategoryContainer/CategoryContainer.module.scss
@@ -8,6 +8,16 @@
     padding: 2rem;
     text-align: center;
 
+    display: flex;
+    align-items: center;
+
+    .img-container {
+      margin-left: 1rem; // Espacio entre el título y la imagen
+      img {
+        max-width: 100%;
+        height: auto;
+      }
+
     h2 {
       font-family: 'IBM Plex Serif';
       font-size: 1.6rem;
@@ -15,21 +25,27 @@
       font-weight: 500;
     }
   }
+}
 
   &__categories {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 0.5rem;
+    gap: 1rem;
     margin-top: 3.75rem;
 
-    button {
-      width: fit-content;
-      min-height: 3rem;
-      border-radius: 0.625rem;
-      margin: 0;
-      padding-inline: 1rem;
-      font-size: medium
+    Button {
+      width: calc(33.33% - 1rem); // Ajusta el ancho de los botones según la cantidad por fila
+      background-color: purple;
+      color: white;
+
+      &:nth-child(3n + 1) {
+        margin-right: 0;
+      }
+
+      &:nth-child(3n) {
+        margin-left: 0;
+      }
     }
   }
 
@@ -59,14 +75,18 @@
       p,
       h2 {
         flex: 50%;
-      }
-      
-      h2 {
-        font-size: 2.5rem;
+        margin-bottom: 1rem;
       }
   
       p {
         font-size: 1.5rem;
+      }
+
+      .img-container {
+        img {
+          max-width: 100%;
+          height: auto;
+        }
       }
     }
   }
