--- a/Client/travel-go-client/src/components/Container/LandingContainer/LandingInformation/LandingInformation.module.scss
+++ b/Client/travel-go-client/src/components/Container/LandingContainer/LandingInformation/LandingInformation.module.scss
@@ -34,7 +34,7 @@
       font-weight: 500;
       margin-block: 1rem;
       font-size: 1.875rem;
-      color: purple;
+      color: #5658FF;
     }
 
     p {
