--- a/Client/travel-go-client/src/components/Button/Button.module.scss
+++ b/Client/travel-go-client/src/components/Button/Button.module.scss
@@ -6,7 +6,7 @@
   text-align: center;
   border: 0.125rem solid #2a2a2a;
   background-color: #2a2a2a;
-  padding: 0.3rem 1.5rem;
+  padding: 0.5rem 1.5rem;
   color: white;
   border-radius: 7rem;
   font-weight: bold;
@@ -84,7 +84,8 @@
     }
 
     &--white:hover {
-      background-color: #f3f3f3;
+      background-color: #6c5ce7;
+      color: white;
     }
 
     &--pink:hover{
