--- a/Client/travel-go-client/src/views/LandingView/LandingView.module.scss
+++ b/Client/travel-go-client/src/views/LandingView/LandingView.module.scss
@@ -30,11 +30,15 @@ $background-image: url('../../assets/hero-compress.png');
       align-items: center;
       padding-inline: 1rem;
       text-align: center;
-      //color: white;
-
-
     }
-
+  
+    .custom-link {
+      margin-top: 10px;
+      font-size: 1.2rem;
+      color: #000;
+      text-decoration: none; /* Cambia a 'none' para quitar el subrayado */
+    }
+  
     button {
       font-size: 0.9rem;
     }
